# 360Degree_Head_Movement_Dataset

./: CMakeLists.txt  README.rst  config.ini
LibAvWrapper/inc/: Buffer.hpp  Frame.hpp  VideoReader.hpp
LibAvWrapper/src/: VideoReader.cpp
PythonInterface/: ExportResults.py  PostProcessing.py  README.rst  TestManager.py  config.ini  requirements.txt  startOsvrServer.sh  startPostProcessing.sh  startTestManager.sh
PythonInterface/GUIHelpers/: DeleteTestFrame.py  ExitManager.py  HomeFrame.py  TestConfigurationFrame.py  TestSessionFrame.py  UserSelectionFrame.py  VerticalScrolledFrame.py  __init__.py
PythonInterface/Helpers/: CMakeLists.txt  CQuaternion.cpp  FFmpeg.py  IniConfParser.py  Quaternion.py  Statistics.py  TestManager.py  User.py  UserManager.py  Video.py  VideoManager.py  __init__.py
TestRenderManager/: CMakeLists.txt  RenderManagerOpenGLHighPolyTest.cpp
TestRenderManager/LibAvWrapper/: CMakeLists.txt
TestRenderManager/LibAvWrapper/inc/: Buffer.hpp  DisplayFrameInfo.hpp  Frame.hpp  VideoReader.hpp
TestRenderManager/LibAvWrapper/src/: VideoReader.cpp
TestRenderManager/src/: ConfigParser.cpp  ConfigParser.hpp  Log.hpp  LogWriter.cpp  LogWriter.hpp  Mesh.cpp  Mesh.hpp  MeshCube.cpp  MeshCube.hpp  MeshCubeEquiUV.cpp  PublisherLogMQ.hpp  Quaternion.hpp  RenderManagerOpenGLHighPolyTest.cpp  Shader.cpp  Shader.hpp  ShaderTexture.hpp  ShaderTextureStatic.cpp  ShaderTextureStatic.hpp  ShaderTextureVideo.cpp  ShaderTextureVideo.hpp
src/: ConfigParser.cpp  Log.hpp  LogWriter.cpp  LogWriter.hpp  Mesh.cpp  MeshCubeEquiUV.hpp  OSVRClientTracker.cpp  Quaternion.hpp  RenderManagerOpenGLHighPolyTest.cpp  ShaderTexture.hpp  ShaderTextureVideo.hpp  Timestamp.hpp
test/: CMakeLists.txt  RenderManagerOpenGLExample.cpp
